@@ -228,8 +228,6 @@
     <Compile Include="GameSpecific\CrashTTR\RCF_Manager.cs" />
     <Compile Include="GameSpecific\MarioSunshine\Modder_MarioSunshine.cs" />
     <Compile Include="GameSpecific\CrashMoM\Modder_MoM.cs" />
-    <Compile Include="GameSpecific\Persona3\Modder_Persona3.cs" />
-    <Compile Include="GameSpecific\Persona4\Modder_Persona4.cs" />
     <Compile Include="GameSpecific\Rayman2\Modder_Rayman2.cs" />
     <Compile Include="GameSpecific\Rayman3\Modder_Rayman3.cs" />
     <Compile Include="GameSpecific\Rayman3\TBFtool\BitmapHelper.cs" />
